--- a/github_topics_scraping.ipynb
+++ b/github_topics_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "30267ec0",
+   "id": "9c03362d",
    "metadata": {},
    "source": [
     "### Top Repositories for Github Topics "
@@ -11,58 +11,190 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "835db22d",
+   "id": "5d2a9620",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9492610b",
+   "id": "1de4ce10",
    "metadata": {},
    "source": [
-    "#### Objectives:\n",
+    "### Objectives:\n",
     "\n",
-    "    Browse through the ithub topic site and pick the top topics to scrape.\n",
-    "    Identify the information you'd like to scrape from the site. Decide the format of the output CSV file.\n",
-    "    Summarize your project idea and outline your strategy in a Juptyer notebook.\n"
+    "    A: Browse through the github topic site and select the top topics to scrape.\n",
+    "    B: Identify the information you'd like to scrape from the site. Decide the format of the output CSV file.\n",
+    "    C: Summarize your project idea and outline your strategy in a Juptyer notebook.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eaf3031",
+   "metadata": {},
+   "source": [
+    "### Project Outline\n",
+    "\n",
+    "- The site to scrape https://github.com/topics\n",
+    "- Extracting a list of topics from the site. For each topic, I'll extract the topic title, topic page URL and topic description\n",
+    "- For each topic, I'll get the top 25 repositories in the topic from the topic page.\n",
+    "- For each repository, I'll grab the repo name, username, stars and repo URL\n",
+    "- For each topic I'll create a CSV file in the following format:\n",
+    "\n",
+    "   Repo Name,Username,Stars,Repo URL \n",
+    "   three.js,mrdoob,69700,https://github.com/mrdoob/three.js \n",
+    "   libgdx,libgdx,18300,https://github.com/libgdx/libgdx\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73b5f27a",
+   "metadata": {},
+   "source": [
+    "### Using the requests library to download web pages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0477e6d6",
+   "execution_count": 3,
+   "id": "29277dc1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\r\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/usr/bin/python3 -m pip install --upgrade pip\u001b[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install requests --upgrade --quiet"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "227a5659",
+   "execution_count": 4,
+   "id": "e3639d2c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ef87f3d",
+   "execution_count": 5,
+   "id": "f9416d32",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "topics_url = 'https://github.com/topics'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0eb9c4bb",
+   "execution_count": 7,
+   "id": "31a90735",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "response = requests.get(topics_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "813c8d2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#verifying the http status code for reponse\n",
+    "response.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "26c3d827",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "185298"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#getting the length of the webpage content\n",
+    "len(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "43a3898b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "page_contents = response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7bd04ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n<!DOCTYPE html>\\n<html\\n  lang=\"en\"\\n  \\n  data-color-mode=\"auto\" data-light-theme=\"light\" data-dark-theme=\"dark\"\\n  data-a11y-animated-images=\"system\" data-a11y-link-underlines=\"true\"\\n  >\\n\\n\\n\\n\\n  <head>\\n    <meta charset=\"utf-8\">\\n  <link rel=\"dns-prefetch\" href=\"https://github.githubassets.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://avatars.githubusercontent.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://github-cloud.s3.amazonaws.com\">\\n  <link rel=\"dns-prefetch\" href=\"https://user-images.githubusercontent.com/\">\\n  <link rel=\"preconnect\" href=\"https://github.githubassets.com\" crossorigin>\\n  <link rel=\"preconnect\" href=\"https://avatars.githubusercontent.com\">\\n\\n  \\n\\n  <link crossorigin=\"anonymous\" media=\"all\" rel=\"stylesheet\" href=\"https://github.githubassets.com/assets/light-0eace2597ca3.css\" /><link crossorigin=\"anonymous\" media=\"all\" rel=\"stylesheet\" href=\"https://github.githubassets.com/assets/dark-a167e256da9c.css\" /><link data-color-theme=\"dark_dimmed\" crossorigin=\"anonymous\" media=\"a'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Viewing the first 1000 page content of the web content \n",
+    "page_contents[:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7710a193",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the page_contents sliced above into an html file\n",
+    "with open('webpage.html', 'w') as f:\n",
+    "        f.write(page_contents)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "7130fd78",
+   "id": "cae259d3",
    "metadata": {},
    "source": [
     "### Use Beautiful Soup to parse and extract information"
@@ -71,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50f59040",
+   "id": "ca8730ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -79,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27449edc",
+   "id": "fd06b7c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -87,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c63d034c",
+   "id": "ea85b7b9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -95,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "218d58fb",
+   "id": "0fcb1b08",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -103,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05f5fd4d",
+   "id": "8364d91d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,14 +243,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f565948",
+   "id": "7f660100",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "416f8c06",
+   "id": "d89bf78c",
    "metadata": {},
    "source": [
     "### Getting information out of a topic page"
@@ -127,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f06dc6",
+   "id": "051c0262",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -135,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef634117",
+   "id": "2a48ef35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -143,14 +275,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2196fa15",
+   "id": "6c58fa4c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f5f472be",
+   "id": "8ebff247",
    "metadata": {},
    "source": [
     "###  Create a CSV"
@@ -159,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58981d3b",
+   "id": "e779f37a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -167,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24689b00",
+   "id": "9320d043",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d933bef",
+   "id": "f3582924",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -183,14 +315,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55f1839d",
+   "id": "861f1acd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "18d44c0e",
+   "id": "dd1775bf",
    "metadata": {},
    "source": [
     "### Document and Share the Work"
@@ -199,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfbee6eb",
+   "id": "a171d8b5",
    "metadata": {},
    "outputs": [],
    "source": []
