--- a/github_topics_scraping.ipynb
+++ b/github_topics_scraping.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "f9416d32",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "31a90735",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "813c8d2d",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "200"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,17 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "26c3d827",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "185461"
+       "185683"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "43a3898b",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "fd06b7c2",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "ea85b7b9",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "0fcb1b08",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "bs4.BeautifulSoup"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "8364d91d",
    "metadata": {},
    "outputs": [],
@@ -276,17 +276,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "id": "7f660100",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "69"
+       "30"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,25 +297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "395b1cc6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<p>We read every piece of feedback, and take your input very seriously.</p>,\n",
-       " <p class=\"text-small color-fg-muted\">\n",
-       "             To see all available qualifiers, see our <a class=\"Link--inTextBlock\" href=\"https://docs.github.com/search-github/github-code-search/understanding-github-code-search-syntax\">documentation</a>.\n",
-       "           </p>,\n",
-       " <p class=\"f4 color-fg-muted col-md-6 mx-auto\">Browse popular topics on GitHub.</p>,\n",
-       " <p class=\"f3 lh-condensed text-center Link--primary mb-0 mt-1\">\n",
-       "         React Native\n",
-       "       </p>,\n",
-       " <p class=\"f5 color-fg-muted text-center mb-0 mt-1\">React Native is a JavaScript mobile framework developed by Facebook.</p>]"
+       "[<p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">3D</p>,\n",
+       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Ajax</p>,\n",
+       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Algorithm</p>,\n",
+       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Amp</p>,\n",
+       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Android</p>]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "id": "da83e5e8",
    "metadata": {},
    "outputs": [],
@@ -338,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "id": "298867d6",
    "metadata": {},
    "outputs": [
@@ -348,18 +344,18 @@
        "30"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(p_tags)"
+    "len(topic_title_tags)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "id": "d0b169dd",
    "metadata": {},
    "outputs": [
@@ -373,7 +369,7 @@
        " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Android</p>]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,8 +379,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "650f15ea",
+   "metadata": {},
+   "source": [
+    "##### Extracting the topic descriptions from the topic description tags"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 49,
    "id": "37a0badd",
    "metadata": {},
    "outputs": [],
@@ -396,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 50,
    "id": "5966f3cc",
    "metadata": {},
    "outputs": [
@@ -420,7 +424,7 @@
        "         </p>]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,160 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "b3db93f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Extracing the url to the first topic page\n",
-    "#step1 : finding the topic link tags\n",
-    "topic_link_tags = doc.find_all('a', {'class':'no-underline flex-grow-0'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "8e52c285",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(topic_link_tags)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "532d68ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://github.com/topics/3d\n"
-     ]
-    }
-   ],
-   "source": [
-    "#appending the ink tags to the github url\n",
-    "topic0_url = \"https://github.com\" + topic_link_tags[0]['href']\n",
-    "print(topic0_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "46b254ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">3D</p>,\n",
-       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Ajax</p>,\n",
-       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Algorithm</p>,\n",
-       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Amp</p>,\n",
-       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Android</p>]"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "topic_title_tags[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "a4c64a41",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['3D', 'Ajax', 'Algorithm', 'Amp', 'Android', 'Angular', 'Ansible', 'API', 'Arduino', 'ASP.NET', 'Atom', 'Awesome Lists', 'Amazon Web Services', 'Azure', 'Babel', 'Bash', 'Bitcoin', 'Bootstrap', 'Bot', 'C', 'Chrome', 'Chrome extension', 'Command line interface', 'Clojure', 'Code quality', 'Code review', 'Compiler', 'Continuous integration', 'COVID-19', 'C++']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#etxracting a list of the topic titles from the topic_title_tags using a for loop \n",
-    "topic_titles = []\n",
-    "\n",
-    "for tag in topic_title_tags:\n",
-    "    topic_titles.append(tag.text)\n",
-    "    \n",
-    "print(topic_titles) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "273f5e92",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<a class=\"no-underline flex-grow-0\" href=\"/topics/3d\">\n",
-       "<div class=\"color-bg-accent f4 color-fg-muted text-bold rounded mr-3 flex-shrink-0 text-center\" style=\"width:64px; height:64px; line-height:64px;\">\n",
-       "            #\n",
-       "          </div>\n",
-       "</a>"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "topic_link_tags[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "id": "43eba063",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<p class=\"f5 color-fg-muted mb-0 mt-1\">\n",
-       "           3D refers to the use of three-dimensional graphics, modeling, and animation in various industries.\n",
-       "         </p>,\n",
-       " <p class=\"f5 color-fg-muted mb-0 mt-1\">\n",
-       "           Ajax is a technique for creating interactive web applications.\n",
-       "         </p>]"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "topic_desc_tags[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 51,
    "id": "29ea6074",
    "metadata": {},
    "outputs": [
@@ -608,7 +459,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 52,
+   "id": "43eba063",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3D refers to the use of three-dimensional graphics, modeling, and animation in various industries.',\n",
+       " 'Ajax is a technique for creating interactive web applications.',\n",
+       " 'Algorithms are self-contained sequences that carry out a variety of tasks.',\n",
+       " 'Amp is a non-blocking concurrency library for PHP.',\n",
+       " 'Android is an operating system built by Google designed for mobile devices.']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topic_descs[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a963a609",
+   "metadata": {},
+   "source": [
+    "##### Extracting the hrefs links from the topic pages\n",
+    "###### step1 : finding the topic link tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "b3db93f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_link_tags = doc.find_all('a', {'class':'no-underline flex-grow-0'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "8e52c285",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(topic_link_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "c2e6789c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/topics/3d'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topic_link_tags[0]['href']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f369fc6",
+   "metadata": {},
+   "source": [
+    "###### Step2: appending the link tags to the github url to create the desired topic url."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "532d68ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://github.com/topics/3d\n"
+     ]
+    }
+   ],
+   "source": [
+    "topic0_url = \"https://github.com\" + topic_link_tags[0]['href']\n",
+    "print(topic0_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf0cb6f6",
+   "metadata": {},
+   "source": [
+    "###### Step3: Creating  a list of the topic Urls from the topic_link_tags using a for loop. This generates new topic urls for the different topics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "9e262f4a",
    "metadata": {},
    "outputs": [
@@ -621,7 +593,6 @@
     }
    ],
    "source": [
-    "#etxracting a list of the topic Urls from the topic_link_tags using a for loop\n",
     "topic_urls = []\n",
     "base_url = \"https://github.com\"\n",
     "\n",
@@ -629,6 +600,63 @@
     "    topic_urls.append(base_url + tag['href'])\n",
     "print(topic_urls)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06ecaea8",
+   "metadata": {},
+   "source": [
+    "##### Extracting topic titles from the topic_title_tags "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "46b254ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">3D</p>,\n",
+       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Ajax</p>,\n",
+       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Algorithm</p>,\n",
+       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Amp</p>,\n",
+       " <p class=\"f3 lh-condensed mb-0 mt-1 Link--primary\">Android</p>]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topic_title_tags[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a4c64a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['3D', 'Ajax', 'Algorithm', 'Amp', 'Android', 'Angular', 'Ansible', 'API', 'Arduino', 'ASP.NET', 'Atom', 'Awesome Lists', 'Amazon Web Services', 'Azure', 'Babel', 'Bash', 'Bitcoin', 'Bootstrap', 'Bot', 'C', 'Chrome', 'Chrome extension', 'Command line interface', 'Clojure', 'Code quality', 'Code review', 'Compiler', 'Continuous integration', 'COVID-19', 'C++']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#extracting a list of the topic titles from the topic_title_tags using a for loop \n",
+    "topic_titles = []\n",
+    "\n",
+    "for tag in topic_title_tags:\n",
+    "    topic_titles.append(tag.text)\n",
+    "    \n",
+    "print(topic_titles) "
    ]
   },
   {
@@ -641,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 58,
    "id": "ceb4cdd5",
    "metadata": {},
    "outputs": [],
@@ -651,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 59,
    "id": "c22d25bd",
    "metadata": {},
    "outputs": [],
@@ -666,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 60,
    "id": "569fd037",
    "metadata": {},
    "outputs": [],
@@ -676,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 61,
    "id": "bb73f4ee",
    "metadata": {},
    "outputs": [
@@ -957,7 +985,7 @@
        "29                     https://github.com/topics/cpp  "
       ]
      },
-     "execution_count": 142,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
