--- a/github_topics_scraping.ipynb
+++ b/github_topics_scraping.ipynb
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f057b5c7",
+   "id": "347e7b24",
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "91e01a7e",
+   "id": "fa648541",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "73008bea",
+   "id": "ef03ac92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "991b4ac5",
+   "id": "b61b2548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "077a3d2b",
+   "id": "da21019f",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "ccbbe60d",
+   "id": "de434826",
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "10fc5f7f",
+   "id": "c8733d96",
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1202,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9d659e82",
+   "id": "a49bf5cc",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a2f1f0cd",
+   "id": "9186fddd",
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ccb38f67",
+   "id": "294a3abd",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "e55ace90",
+   "id": "9c2b7e42",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f0fcfa3c",
+   "id": "773d8bdd",
    "metadata": {},
    "outputs": [
     {
@@ -1313,8 +1313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "ae11be4c",
+   "execution_count": 77,
+   "id": "ad105a2c",
    "metadata": {},
    "outputs": [
     {
@@ -1326,27 +1326,105 @@
     }
    ],
    "source": [
-    "#creating a repo url from the above scraped data\n",
+    "#creating the repo url from the above scraped data\n",
     "base_url = \"https://github.com\"\n",
     "repo_url = base_url + a_tags[1]['href']\n",
     "print(repo_url)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bce3af8e",
+   "cell_type": "markdown",
+   "id": "33a9ca19",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Scraping the number of stars for the repository"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d7da9afb",
+   "execution_count": 80,
+   "id": "0a86ace1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "star_tags = topic_doc.find_all('span', id='repo-stars-counter-star')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "6ae4905f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(star_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "7cd1ee07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'97.6k'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "star_tags[0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "c0517cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Converting the Stars to a defined number \n",
+    "def parse_star_count(stars_str):\n",
+    "    stars_str = stars_str.strip()\n",
+    "    if stars_str[-1]== 'k': #if the last element is eqal to k\n",
+    "        return int(float(stars_str[:-1])*1000) # we remove the last element using stars_str[:-1]\n",
+    "    return int(stars_str)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "37949b5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97600\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parse_star_count(star_tags[0].text))"
+   ]
   },
   {
    "cell_type": "markdown",
