Creating a function that returns all required data for a specific repo.

--- a/github_topics_scraping.ipynb
+++ b/github_topics_scraping.ipynb
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "185591"
+       "185626"
       ]
      },
      "execution_count": 5,
@@ -310,9 +310,9 @@
        "           </p>,\n",
        " <p class=\"f4 color-fg-muted col-md-6 mx-auto\">Browse popular topics on GitHub.</p>,\n",
        " <p class=\"f3 lh-condensed text-center Link--primary mb-0 mt-1\">\n",
-       "         macOS\n",
+       "         Firefox\n",
        "       </p>,\n",
-       " <p class=\"f5 color-fg-muted text-center mb-0 mt-1\">macOS is Apple's operating system.</p>]"
+       " <p class=\"f5 color-fg-muted text-center mb-0 mt-1\">Firefox is an open source web browser from Mozilla.</p>]"
       ]
      },
      "execution_count": 13,
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "id": "051c0262",
    "metadata": {},
    "outputs": [],
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "id": "2a48ef35",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1041,7 @@
        "'https://github.com/topics/3d'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "id": "6c58fa4c",
    "metadata": {},
    "outputs": [],
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "id": "347e7b24",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1072,7 @@
        "200"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,17 +1084,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "id": "fa648541",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "503563"
+       "503593"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 37,
    "id": "ef03ac92",
    "metadata": {},
    "outputs": [],
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "id": "b61b2548",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "id": "da21019f",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1142,7 @@
        "</a> </h3>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "id": "de434826",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1163,7 @@
        "20"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 41,
    "id": "c8733d96",
    "metadata": {},
    "outputs": [
@@ -1189,7 +1189,7 @@
        " </a>]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "id": "a49bf5cc",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1213,7 @@
        "</a>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "id": "9186fddd",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1234,7 @@
        "'mrdoob'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "id": "294a3abd",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1258,7 @@
        "</a>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "id": "9c2b7e42",
    "metadata": {},
    "outputs": [
@@ -1279,19 +1279,19 @@
        "'three.js'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#scraping the link\n",
+    "#scraping the repository name\n",
     "a_tags[1].text.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "id": "773d8bdd",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
        "'/mrdoob/three.js'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 47,
    "id": "ad105a2c",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "id": "0a86ace1",
    "metadata": {},
    "outputs": [],
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 49,
    "id": "6ae4905f",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
        "20"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 73,
    "id": "7cd1ee07",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
        "'97.6k'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 74,
    "id": "c0517cc5",
    "metadata": {},
    "outputs": [],
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 75,
    "id": "37949b5d",
    "metadata": {},
    "outputs": [
@@ -1425,6 +1425,92 @@
    "source": [
     "print(parse_star_count(star_tags[0].text))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6b677ba",
+   "metadata": {},
+   "source": [
+    "#### Creating a function that returns all required data for a specific repo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "71dcd110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rep_info(h3_tag, star_tag):\n",
+    "    #returns all the required information about a repository\n",
+    "    a_tags = h3_tag.find_all('a')\n",
+    "    username = a_tags[0].text.strip()\n",
+    "    repo_name = a_tags[1].text.strip()\n",
+    "    repo_url = base_url + a_tags[1]['href']\n",
+    "    star_count = parse_star_count(star_tag.text.strip())\n",
+    "    return username, repo_name, repo_url, star_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "57f46039",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('mrdoob', 'three.js', 'https://github.com/mrdoob/three.js', 97600)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_rep_info(repo_tags[0], star_tags[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99ba3227",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3123e60b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1850b4e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5192651",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abf4f920",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
